# LeRobotHackathonEnv

./: .gitignore  README.md  pyproject.toml
fast_td3/: fast_td3_utils.py  hyperparams.py  train.py  train_multigpu.py
fast_td3/environments/: lerobot_puffer_env.py
scripts/: lerobot_leader_arm.json  mj_viewer_rendering.py  rate_limiter.py  record_in_sim_demonstration.py  run_record.sh  test_trajectory_set.py  trajectory_set.py
scripts/trajectories/: trajectory_000000.npz  trajectory_000001.npz  trajectory_000002.npz  trajectory_000003.npz  trajectory_000004.npz  trajectory_000005.npz  trajectory_000006.npz  trajectory_000007.npz  trajectory_000008.npz  trajectory_000009.npz  trajectory_000010.npz  trajectory_000011.npz  trajectory_000012.npz  trajectory_000013.npz  trajectory_000014.npz  trajectory_000015.npz  trajectory_000016.npz  trajectory_000017.npz  trajectory_000018.npz  trajectory_000019.npz  trajectory_000020.npz  trajectory_000021.npz  trajectory_000022.npz  trajectory_000023.npz  trajectory_000024.npz  trajectory_000025.npz  trajectory_000026.npz  trajectory_000027.npz  trajectory_000028.npz  trajectory_000029.npz  trajectory_000030.npz  trajectory_000031.npz  trajectory_000032.npz  trajectory_000033.npz  trajectory_000034.npz  trajectory_000035.npz  trajectory_000036.npz  trajectory_000037.npz  trajectory_000038.npz  trajectory_000039.npz  (+61 more)
src/lerobothackathonenv/: __init__.py  env.py  structs.py  tasks.py  types.py  wrappers.py
src/lerobothackathonenv/models/xml/: so101_convex_decomb.xml  (+1 more)
tests/: mj_viewer_rendering.py  test_env.py
(+1883 files in other folders)
