[project]
name = "lerobothackathonenv"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "dm-control>=1.0.34",
    "gymnasium==0.29.1",
    "mujoco>=3.3.7",
    "pufferlib==3.0.0",
    "gym==0.23",
    "torch==2.6.0",
    "tensordict>=0.6.0",
    "wandb[media]>=0.17.0",
    "tyro>=0.9.35",
    "moviepy>=2.2.1",
    "lerobot[feetech]>=0.3.3",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.7",
    "pudb>=2025.1.3",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
lerobot-fast-td3-train = "lerobothackathonenv.cli_fast_td3:main"

[tool.uv]
python-preference = "only-managed"
